# elk-generalization

./: .gitignore  README.md  make_datasets.py  misc.ipynb  pyproject.toml  requirements.txt  ruff.toml  setup.py
blogpost/: blogpost.md
elk_generalization/: __init__.py  anomaly.py  anomaly_experiment.py  context_generalization.ipynb  dataloaders.py  dpo_finetuning.py  elk_sweep.py  evaluate_naturalness.py  figures.ipynb  finetuning.py  finetuning_old.py  generate_sloppy_dataset.py  merge_lora.py  misc.ipynb  results.ipynb  results_utils.py  run_dpo_finetuning.py  run_elk.py  run_elk.sh  run_finetuning.py  run_finetuning.sh  run_kl_finetuning.sh  run_naturalness.sh  templates.py  utils.py
elk_generalization/anomaly/: anomaly.py  anomaly_experiment.py  detect_anomaly.py  run_anomaly.py
elk_generalization/datasets/: azaria_mitchell_dataset.py  azaria_mitchell_weak_lm_dataset.py  binary_operation_dataset.py  books_dataset.py  cities_dataset.py  create_datasets.py  ds_utils.py  generate_sloppy_dataset.py  loader_utils.py  nli_dataset.py  popqa_dataset.py  popqa_weak_lm_dataset.py  quirky_dataset.py  race_dataset.py  race_weak_lm_dataset.py  sciq_dataset.py  sciq_weak_lm_dataset.py  sentiment_dataset.py  templates.py  translation_dataset.py  unary_operation_dataset.py  weak_lm_dataset.py
elk_generalization/elk/: ccs.py  ccs_losses.py  classifier.py  crc.py  extract_hiddens.py  lda.py  lr_classifier.py  mean_diff.py  random_baseline.py  roc_auc.py  run_transfers.py  transfer.py  vincs.py
test/: dataset_viz.ipynb  test_addition.py  test_datasets.py  test_vinc.py
(+19 files in other folders)
